name:           PathSearch
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Koehler

executable psearch
  build-depends:   
                   base >= 4,
                   split,
                   directory,
                   Glob,
                   filepath
  hs-source-dirs:  src
  ghc-options:      -Wall -fno-warn-unused-do-bind -O2 -funbox-strict-fields
  main-is:         Main.hs

